// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with no message or type 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Message />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should match snapshot with type danger 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Message
    message="Message"
    type="danger"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <IonIcon
          name="ios-alert"
          size={20}
          style={
            Object {
              "alignSelf": "center",
              "marginLeft": 0,
              "marginRight": 20,
              "marginTop": 2,
            }
          }
        />,
        <DefaultFont
          style={
            Object {
              "alignSelf": "center",
              "color": "#fff",
              "flex": 1,
              "fontSize": 12,
            }
          }
        >
          Message
        </DefaultFont>,
        <DefaultFont
          onPress={[Function]}
          style={
            Object {
              "fontSize": 10,
              "fontWeight": "bold",
            }
          }
        >
          Stäng
        </DefaultFont>,
      ],
      "style": Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 3,
          "elevation": 5,
          "flexDirection": "row",
          "justifyContent": "center",
          "margin": 5,
          "padding": 20,
          "shadowColor": "#282828",
          "shadowOffset": Object {
            "height": 2.5,
            "width": 2.5,
          },
          "shadowOpacity": 0.5,
          "shadowRadius": 5,
        },
        Object {
          "backgroundColor": "#FF6961",
        },
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "name": "ios-alert",
          "size": 20,
          "style": Object {
            "alignSelf": "center",
            "marginLeft": 0,
            "marginRight": 20,
            "marginTop": 2,
          },
        },
        "ref": null,
        "rendered": null,
        "type": "IonIcon",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Message",
          "style": Object {
            "alignSelf": "center",
            "color": "#fff",
            "flex": 1,
            "fontSize": 12,
          },
        },
        "ref": null,
        "rendered": "Message",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Stäng",
          "onPress": [Function],
          "style": Object {
            "fontSize": 10,
            "fontWeight": "bold",
          },
        },
        "ref": null,
        "rendered": "Stäng",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <IonIcon
            name="ios-alert"
            size={20}
            style={
              Object {
                "alignSelf": "center",
                "marginLeft": 0,
                "marginRight": 20,
                "marginTop": 2,
              }
            }
          />,
          <DefaultFont
            style={
              Object {
                "alignSelf": "center",
                "color": "#fff",
                "flex": 1,
                "fontSize": 12,
              }
            }
          >
            Message
          </DefaultFont>,
          <DefaultFont
            onPress={[Function]}
            style={
              Object {
                "fontSize": 10,
                "fontWeight": "bold",
              }
            }
          >
            Stäng
          </DefaultFont>,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderRadius": 3,
            "elevation": 5,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 5,
            "padding": 20,
            "shadowColor": "#282828",
            "shadowOffset": Object {
              "height": 2.5,
              "width": 2.5,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 5,
          },
          Object {
            "backgroundColor": "#FF6961",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "name": "ios-alert",
            "size": 20,
            "style": Object {
              "alignSelf": "center",
              "marginLeft": 0,
              "marginRight": 20,
              "marginTop": 2,
            },
          },
          "ref": null,
          "rendered": null,
          "type": "IonIcon",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Message",
            "style": Object {
              "alignSelf": "center",
              "color": "#fff",
              "flex": 1,
              "fontSize": 12,
            },
          },
          "ref": null,
          "rendered": "Message",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Stäng",
            "onPress": [Function],
            "style": Object {
              "fontSize": 10,
              "fontWeight": "bold",
            },
          },
          "ref": null,
          "rendered": "Stäng",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should match snapshot with type info 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Message
    message="Message"
    type="info"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <IonIcon
          name="ios-information-circle"
          size={20}
          style={
            Object {
              "alignSelf": "center",
              "marginLeft": 0,
              "marginRight": 20,
              "marginTop": 2,
            }
          }
        />,
        <DefaultFont
          style={
            Object {
              "alignSelf": "center",
              "color": "#fff",
              "flex": 1,
              "fontSize": 12,
            }
          }
        >
          Message
        </DefaultFont>,
        <DefaultFont
          onPress={[Function]}
          style={
            Object {
              "fontSize": 10,
              "fontWeight": "bold",
            }
          }
        >
          Stäng
        </DefaultFont>,
      ],
      "style": Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 3,
          "elevation": 5,
          "flexDirection": "row",
          "justifyContent": "center",
          "margin": 5,
          "padding": 20,
          "shadowColor": "#282828",
          "shadowOffset": Object {
            "height": 2.5,
            "width": 2.5,
          },
          "shadowOpacity": 0.5,
          "shadowRadius": 5,
        },
        Object {
          "backgroundColor": "#779ECB",
        },
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "name": "ios-information-circle",
          "size": 20,
          "style": Object {
            "alignSelf": "center",
            "marginLeft": 0,
            "marginRight": 20,
            "marginTop": 2,
          },
        },
        "ref": null,
        "rendered": null,
        "type": "IonIcon",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Message",
          "style": Object {
            "alignSelf": "center",
            "color": "#fff",
            "flex": 1,
            "fontSize": 12,
          },
        },
        "ref": null,
        "rendered": "Message",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Stäng",
          "onPress": [Function],
          "style": Object {
            "fontSize": 10,
            "fontWeight": "bold",
          },
        },
        "ref": null,
        "rendered": "Stäng",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <IonIcon
            name="ios-information-circle"
            size={20}
            style={
              Object {
                "alignSelf": "center",
                "marginLeft": 0,
                "marginRight": 20,
                "marginTop": 2,
              }
            }
          />,
          <DefaultFont
            style={
              Object {
                "alignSelf": "center",
                "color": "#fff",
                "flex": 1,
                "fontSize": 12,
              }
            }
          >
            Message
          </DefaultFont>,
          <DefaultFont
            onPress={[Function]}
            style={
              Object {
                "fontSize": 10,
                "fontWeight": "bold",
              }
            }
          >
            Stäng
          </DefaultFont>,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderRadius": 3,
            "elevation": 5,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 5,
            "padding": 20,
            "shadowColor": "#282828",
            "shadowOffset": Object {
              "height": 2.5,
              "width": 2.5,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 5,
          },
          Object {
            "backgroundColor": "#779ECB",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "name": "ios-information-circle",
            "size": 20,
            "style": Object {
              "alignSelf": "center",
              "marginLeft": 0,
              "marginRight": 20,
              "marginTop": 2,
            },
          },
          "ref": null,
          "rendered": null,
          "type": "IonIcon",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Message",
            "style": Object {
              "alignSelf": "center",
              "color": "#fff",
              "flex": 1,
              "fontSize": 12,
            },
          },
          "ref": null,
          "rendered": "Message",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Stäng",
            "onPress": [Function],
            "style": Object {
              "fontSize": 10,
              "fontWeight": "bold",
            },
          },
          "ref": null,
          "rendered": "Stäng",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should match snapshot with type null 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Message
    message="Message"
    type={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        null,
        <DefaultFont
          style={
            Object {
              "alignSelf": "center",
              "color": "#fff",
              "flex": 1,
              "fontSize": 12,
            }
          }
        >
          Message
        </DefaultFont>,
        <DefaultFont
          onPress={[Function]}
          style={
            Object {
              "fontSize": 10,
              "fontWeight": "bold",
            }
          }
        >
          Stäng
        </DefaultFont>,
      ],
      "style": Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 3,
          "elevation": 5,
          "flexDirection": "row",
          "justifyContent": "center",
          "margin": 5,
          "padding": 20,
          "shadowColor": "#282828",
          "shadowOffset": Object {
            "height": 2.5,
            "width": 2.5,
          },
          "shadowOpacity": 0.5,
          "shadowRadius": 5,
        },
        Object {
          "backgroundColor": undefined,
        },
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Message",
          "style": Object {
            "alignSelf": "center",
            "color": "#fff",
            "flex": 1,
            "fontSize": 12,
          },
        },
        "ref": null,
        "rendered": "Message",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Stäng",
          "onPress": [Function],
          "style": Object {
            "fontSize": 10,
            "fontWeight": "bold",
          },
        },
        "ref": null,
        "rendered": "Stäng",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          null,
          <DefaultFont
            style={
              Object {
                "alignSelf": "center",
                "color": "#fff",
                "flex": 1,
                "fontSize": 12,
              }
            }
          >
            Message
          </DefaultFont>,
          <DefaultFont
            onPress={[Function]}
            style={
              Object {
                "fontSize": 10,
                "fontWeight": "bold",
              }
            }
          >
            Stäng
          </DefaultFont>,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderRadius": 3,
            "elevation": 5,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 5,
            "padding": 20,
            "shadowColor": "#282828",
            "shadowOffset": Object {
              "height": 2.5,
              "width": 2.5,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 5,
          },
          Object {
            "backgroundColor": undefined,
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Message",
            "style": Object {
              "alignSelf": "center",
              "color": "#fff",
              "flex": 1,
              "fontSize": 12,
            },
          },
          "ref": null,
          "rendered": "Message",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Stäng",
            "onPress": [Function],
            "style": Object {
              "fontSize": 10,
              "fontWeight": "bold",
            },
          },
          "ref": null,
          "rendered": "Stäng",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should match snapshot with type success 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Message
    message="Message"
    type="success"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <IonIcon
          name="ios-checkmark-circle"
          size={20}
          style={
            Object {
              "alignSelf": "center",
              "marginLeft": 0,
              "marginRight": 20,
              "marginTop": 2,
            }
          }
        />,
        <DefaultFont
          style={
            Object {
              "alignSelf": "center",
              "color": "#fff",
              "flex": 1,
              "fontSize": 12,
            }
          }
        >
          Message
        </DefaultFont>,
        <DefaultFont
          onPress={[Function]}
          style={
            Object {
              "fontSize": 10,
              "fontWeight": "bold",
            }
          }
        >
          Stäng
        </DefaultFont>,
      ],
      "style": Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 3,
          "elevation": 5,
          "flexDirection": "row",
          "justifyContent": "center",
          "margin": 5,
          "padding": 20,
          "shadowColor": "#282828",
          "shadowOffset": Object {
            "height": 2.5,
            "width": 2.5,
          },
          "shadowOpacity": 0.5,
          "shadowRadius": 5,
        },
        Object {
          "backgroundColor": "#77DD77",
        },
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "name": "ios-checkmark-circle",
          "size": 20,
          "style": Object {
            "alignSelf": "center",
            "marginLeft": 0,
            "marginRight": 20,
            "marginTop": 2,
          },
        },
        "ref": null,
        "rendered": null,
        "type": "IonIcon",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Message",
          "style": Object {
            "alignSelf": "center",
            "color": "#fff",
            "flex": 1,
            "fontSize": 12,
          },
        },
        "ref": null,
        "rendered": "Message",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Stäng",
          "onPress": [Function],
          "style": Object {
            "fontSize": 10,
            "fontWeight": "bold",
          },
        },
        "ref": null,
        "rendered": "Stäng",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <IonIcon
            name="ios-checkmark-circle"
            size={20}
            style={
              Object {
                "alignSelf": "center",
                "marginLeft": 0,
                "marginRight": 20,
                "marginTop": 2,
              }
            }
          />,
          <DefaultFont
            style={
              Object {
                "alignSelf": "center",
                "color": "#fff",
                "flex": 1,
                "fontSize": 12,
              }
            }
          >
            Message
          </DefaultFont>,
          <DefaultFont
            onPress={[Function]}
            style={
              Object {
                "fontSize": 10,
                "fontWeight": "bold",
              }
            }
          >
            Stäng
          </DefaultFont>,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderRadius": 3,
            "elevation": 5,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 5,
            "padding": 20,
            "shadowColor": "#282828",
            "shadowOffset": Object {
              "height": 2.5,
              "width": 2.5,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 5,
          },
          Object {
            "backgroundColor": "#77DD77",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "name": "ios-checkmark-circle",
            "size": 20,
            "style": Object {
              "alignSelf": "center",
              "marginLeft": 0,
              "marginRight": 20,
              "marginTop": 2,
            },
          },
          "ref": null,
          "rendered": null,
          "type": "IonIcon",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Message",
            "style": Object {
              "alignSelf": "center",
              "color": "#fff",
              "flex": 1,
              "fontSize": 12,
            },
          },
          "ref": null,
          "rendered": "Message",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Stäng",
            "onPress": [Function],
            "style": Object {
              "fontSize": 10,
              "fontWeight": "bold",
            },
          },
          "ref": null,
          "rendered": "Stäng",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should match snapshot with type warning 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Message
    message="Message"
    type="warning"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <IonIcon
          name="ios-warning"
          size={20}
          style={
            Object {
              "alignSelf": "center",
              "marginLeft": 0,
              "marginRight": 20,
              "marginTop": 2,
            }
          }
        />,
        <DefaultFont
          style={
            Object {
              "alignSelf": "center",
              "color": "#fff",
              "flex": 1,
              "fontSize": 12,
            }
          }
        >
          Message
        </DefaultFont>,
        <DefaultFont
          onPress={[Function]}
          style={
            Object {
              "fontSize": 10,
              "fontWeight": "bold",
            }
          }
        >
          Stäng
        </DefaultFont>,
      ],
      "style": Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 3,
          "elevation": 5,
          "flexDirection": "row",
          "justifyContent": "center",
          "margin": 5,
          "padding": 20,
          "shadowColor": "#282828",
          "shadowOffset": Object {
            "height": 2.5,
            "width": 2.5,
          },
          "shadowOpacity": 0.5,
          "shadowRadius": 5,
        },
        Object {
          "backgroundColor": "#FFB347",
        },
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "name": "ios-warning",
          "size": 20,
          "style": Object {
            "alignSelf": "center",
            "marginLeft": 0,
            "marginRight": 20,
            "marginTop": 2,
          },
        },
        "ref": null,
        "rendered": null,
        "type": "IonIcon",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Message",
          "style": Object {
            "alignSelf": "center",
            "color": "#fff",
            "flex": 1,
            "fontSize": 12,
          },
        },
        "ref": null,
        "rendered": "Message",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Stäng",
          "onPress": [Function],
          "style": Object {
            "fontSize": 10,
            "fontWeight": "bold",
          },
        },
        "ref": null,
        "rendered": "Stäng",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <IonIcon
            name="ios-warning"
            size={20}
            style={
              Object {
                "alignSelf": "center",
                "marginLeft": 0,
                "marginRight": 20,
                "marginTop": 2,
              }
            }
          />,
          <DefaultFont
            style={
              Object {
                "alignSelf": "center",
                "color": "#fff",
                "flex": 1,
                "fontSize": 12,
              }
            }
          >
            Message
          </DefaultFont>,
          <DefaultFont
            onPress={[Function]}
            style={
              Object {
                "fontSize": 10,
                "fontWeight": "bold",
              }
            }
          >
            Stäng
          </DefaultFont>,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderRadius": 3,
            "elevation": 5,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 5,
            "padding": 20,
            "shadowColor": "#282828",
            "shadowOffset": Object {
              "height": 2.5,
              "width": 2.5,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 5,
          },
          Object {
            "backgroundColor": "#FFB347",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "name": "ios-warning",
            "size": 20,
            "style": Object {
              "alignSelf": "center",
              "marginLeft": 0,
              "marginRight": 20,
              "marginTop": 2,
            },
          },
          "ref": null,
          "rendered": null,
          "type": "IonIcon",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Message",
            "style": Object {
              "alignSelf": "center",
              "color": "#fff",
              "flex": 1,
              "fontSize": 12,
            },
          },
          "ref": null,
          "rendered": "Message",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Stäng",
            "onPress": [Function],
            "style": Object {
              "fontSize": 10,
              "fontWeight": "bold",
            },
          },
          "ref": null,
          "rendered": "Stäng",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
